--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,11 @@
     "require": {
         "php": ">=7.2",
         "ext-swoole": ">=4.3",
-        "hyperf/utils": "1.0.*"
+        "hyperf/utils": ">=1.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.14",
-        "hyperf/testing": "1.0.*",
+        "hyperf/testing": ">=1.0",
         "phpstan/phpstan": "^0.10.5",
         "swoft/swoole-ide-helper": "dev-master"
     },
