--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "require": {
         "php": ">=8.0",
         "ext-swoole": ">=4.3",
-        "hyperf/utils": ">=3.0"
+        "hyperf/utils": ">=3.0",
+        "myziyue/zookeeper-php": "dev-master"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.14",
