--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,7 @@
     "require": {
         "php": ">=8.0",
         "ext-swoole": ">=4.3",
-        "hyperf/utils": ">=3.0",
-        "myziyue/zookeeper-php": "dev-master"
+        "hyperf/utils": ">=3.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.14",
