change composer.json file

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": [
         "php",
         "hyperf",
-        "yunhu",
+        "myziyue",
         "dubbo"
     ],
     "description": "Dubbo Client for the PHP framework based on Hyperf",
